foundation/cbok/04-deployment-cbok.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cbok
  namespace: cbok
  labels:
    app: cbok
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cbok
  template:
    metadata:
      labels:
        app: cbok
    spec:
      containers:
        - name: cbok
          image: docker.io/kodanevhy/cbok:latest  # Not a real link, please build by yourself, NOTE referring in Dockerfile
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          command:
            - /tmp/start.sh
          volumeMounts:
            - name: startup-script
              mountPath: /tmp/start.sh
              subPath: start.sh
      volumes:
        - name: startup-script
          configMap:
            name: cbok
            defaultMode: 0755
