foundation/cbok/deployment-cbok.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cbok
  namespace: cbok
  labels:
    app: cbok
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cbok
  template:
    metadata:
      labels:
        app: cbok
    spec:
      containers:
        - name: cbok
          image: docker.io/kodanevhy/cbok:latest  # Not a real link, please build by yourself, NOTE referring in Dockerfile
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          command:
            - /tmp/start.sh
          volumeMounts:
            - name: startup-script
              mountPath: /tmp/start.sh
              subPath: start.sh
            - name: django-mysql-patch
              mountPath: /tmp/a41b09266dcdd01036d59d76fe926fe0386aaade.patch
              subPath: a41b09266dcdd01036d59d76fe926fe0386aaade.patch
      volumes:
        - name: startup-script
          configMap:
            name: cbok
            defaultMode: 0755
        - name: django-mysql-patch
          hostPath:
              path: /opt/foundation/cbok/a41b09266dcdd01036d59d76fe926fe0386aaade.patch
              type: File
