foundation/cbok/00-service-cbok.yaml
apiVersion: v1
kind: Service
metadata:
  name: cbok-service
  namespace: cbok
spec:
  type: ClusterIP
  selector:
    app: cbok
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
