foundation/cbok/02-ingress-cbok.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cbok-ingress
  namespace: cbok
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cbok-service
                port:
                  number: 80
